--- a/.gitignore
+++ b/.gitignore
@@ -81,13 +81,6 @@ target/
 # Mac OS-specific storage files
 .DS_Store
 
-# vim
-*.swp
-*.swo
-
-# Mypy cache
-.mypy_cache/
-
-
-#Docker Compose for now
-docker/
+# Compiled files
+layout.css
+src/assets/demo/styles/badges.css
