--- a/webApp/product-explorer/package.json
+++ b/webApp/product-explorer/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "chart.js": "^3.3.2",
+    "file-saver": "^2.0.5",
     "primeflex": "^3.2.1",
     "primeicons": "6.0.1",
     "primeng": "15.1.1",
@@ -28,6 +29,7 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "@angular-eslint/template-parser": "^15.1.0",
     "@angular/cli": "^15.1.0",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/parser": "5.37.0",
