--- a/webApp/product-explorer/package.json
+++ b/webApp/product-explorer/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.1.0",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "chart.js": "^3.3.2",
     "file-saver": "^2.0.5",
+    "firebase": "^9.23.0",
     "primeflex": "^3.2.1",
     "primeicons": "6.0.1",
     "primeng": "15.1.1",
