--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pandas==1.5.3
 protobuf==4.24.0
 python-dotenv==1.0.0
 Requests==2.31.0
+scikit_learn==1.3.0
 tenacity==8.2.2
 tiktoken==0.4.0
 tqdm==4.65.0
