--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ tiktoken==0.4.0
 tqdm==4.65.0
 gunicorn==20.1.0
 connexion[swagger-ui]==2.14.1
+aiofiles==23.2.1
+nest_asyncio==1.5.6
+openai==0.27.8
+termcolor==2.3.0
+
