--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ tqdm==4.65.0
 gunicorn==20.1.0
 connexion[swagger-ui]==2.14.1
 aiofiles==23.2.1
-nest_asyncio==1.5.6
 openai==0.27.8
 termcolor==2.3.0
-
+google-cloud-secret-manager==2.16.3
