testing with gevent

--- a/app.yaml
+++ b/app.yaml
@@ -2,10 +2,9 @@
 # app.yaml
 runtime: python310
 instance_class: F2
-entrypoint: gunicorn -b :$PORT 'src.__init__:app' --timeout 120
+entrypoint: gunicorn -k gevent -b :$PORT 'src.__init__:app' --timeout 120
 automatic_scaling:
   target_cpu_utilization: 0.8
   min_instances: 0
   max_instances: 5
 ##======================
-
