--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,11 @@
 ##################
 # app.yaml
 runtime: python310
-instance_class: F2
-entrypoint: gunicorn -k gevent -b :$PORT 'src.__init__:app' --timeout 600
+instance_class: F3
+entrypoint: gunicorn -b :$PORT 'src.__init__:app' --timeout 600
 automatic_scaling:
   target_cpu_utilization: 0.8
   min_instances: 0
   max_instances: 5
 ##======================
+
