--- a/app.yaml
+++ b/app.yaml
@@ -3,11 +3,10 @@
 runtime: python310
 # env: flex
 instance_class: F4
-entrypoint: gunicorn -b :$PORT '__init__:app' --timeout 600
+entrypoint: gunicorn -b :$8080 '__init__:app' --timeout 600
 automatic_scaling:
   # cool_down_period_sec: 600
   target_cpu_utilization: 0.8
   min_instances: 0
   max_instances: 5
 ##======================
-
