--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@
 runtime: python310
 # env: flex
 instance_class: F4
-entrypoint: gunicorn -b :$8080 '__init__:app' --timeout 600
+entrypoint: gunicorn -b :$8080 'app:app' --timeout 600
 automatic_scaling:
   # cool_down_period_sec: 600
   target_cpu_utilization: 0.8
