--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,12 @@
 ##################
 # app.yaml
 runtime: python310
-# env: flex
 instance_class: F4
-entrypoint: gunicorn -b :$8080 'app:app' --timeout 600
+entrypoint: gunicorn -b :$PORT 'app:app' --timeout 600
 automatic_scaling:
   # cool_down_period_sec: 600
   target_cpu_utilization: 0.8
   min_instances: 0
   max_instances: 5
+
 ##======================
